  fetch operation. (Robert Collins, Andrew Bennetts)

* ``register_filter_stack_map`` now takes an optional fallback parameter,
  a callable to invoke if a preference has a value not in the map
  of filter stacks. This enhancement allows, for example,  bzr-svn to
  handle existing svn properties that define a list of keywords to be
  expanded.  (Ian Clatworthy)

* ``RemoteBranch`` now provides ``_get_config`` for access to just the
  branch specific configuration from a remote server, which uses the 
  already existing ``Branch.get_config_file`` smart verb.
  (Robert Collins, Andrew Bennetts)

* ``RemoteRepository`` will now negatively cache missing revisions during
  ``get_parent_map`` while read-locked. Write-locks are unaffected.
  (Robert Collins, Andrew Bennetts)

* Removed ``InterRemoteToOther``, ``InterOtherToRemote`` and
  ``InterPackToRemotePack`` classes, as they are now unnecessary.
  (Andrew Bennetts)

* ``RepositoryFormat`` as a new attribute ``fast_deltas`` to indicate
  whether the repository can efficiently generate deltas between trees
  regardless of tree size. (Robert Collins)

* ``Repository.iter_files_bytes()`` now properly returns an "iterable of
  byte strings" (aka 'chunked') for the content. It previously was
  returning a plain string, which worked, but performed very poorly when
  building a working tree (file.writelines(str) is very inefficient). This
  can have a large effect on ``bzr checkout`` times. (John Arbash Meinel)

* selftest now supports a --parallel option, with values of 'fork' or
  'subprocess' to run the test suite in parallel. Currently only linux
  machine work, other platforms need patches submitted. (Robert Collins,
  Vincent Ladeuil)

* ``tests.run_suite`` has a new parameter ``suite_decorators``, a list of 
  callables to use to decorate the test suite. Such decorators can add or
  remove tests, or even remote the test suite to another machine if
  desired. (Robert Collins)
